# pythonic-bst

./: LICENSE.md  README.md  publish.sh  pyproject.toml
src/: demo.ipynb
src/bst/: __init__.py  core.py  core_bst.py
tests/: test_bst.py
